k8s/teste-cms.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cms
  template:
    metadata:
      labels:
        app: cms
    spec:
      containers:
        - name: frontend
          image: registry.patrick.dev.br/library/cms-frontend:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: cms-svc
spec:
  selector:
    app: cms
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cms-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: patrick.dev.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cms-svc
                port:
                  number: 3000
    - host: www.patrick.dev.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cms-svc
                port:
                  number: 3000
