k8s/teste.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pagina-hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pagina-hello
  template:
    metadata:
      labels:
        app: pagina-hello
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html-volume
          configMap:
            name: html-config
---
apiVersion: v1
kind: Service
metadata:
  name: pagina-hello-svc
spec:
  selector:
    app: pagina-hello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pagina-hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: homelab.patrick.dev.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pagina-hello-svc
                port:
                  number: 80
    - host: patrick.dev.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pagina-hello-svc
                port:
                  number: 80
